external-crates/move/crates/move-compiler/tests/move_2024/parser/use_fun_unit.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/use_fun_unit.move:2:20
  │
2 │     use fun foo as ().foo;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a type name with no type arguments
